fix: fixed align elements

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,8 +150,6 @@
   border: 1px solid rgba(0, 0, 0, 0.267);
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
   border-radius: 4px;
-  height: 30px;
-  width: 30px;
   margin-left: 5px;
   cursor: pointer;
 }
@@ -168,6 +166,7 @@
   margin: 5px auto 0px auto;
   padding: 5px;
   overflow-x: hidden;
+  margin: 0px;
 }
 .ModalContainerEditBtn .closeEditModal {
   display: block;
