--- a/assets/sass/partials/_selectorsJs.sass
+++ b/assets/sass/partials/_selectorsJs.sass
@@ -81,9 +81,7 @@
         .icons   
             border: 1px solid rgba(0, 0, 0, 0.267)
             box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5)
-            border-radius: 4px   
-            height: 30px  
-            width: 30px   
+            border-radius: 4px  
             margin-left: 5px   
             cursor: pointer 
 
@@ -93,7 +91,8 @@
  
             .DivElement          
                 @include mixins.DivElement    
-                overflow-x: hidden       
+                overflow-x: hidden 
+                margin: 0px       
                 
             
     .closeEditModal 
